# blockchain-3d-visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  README.md:Zone.Identifier  vcpkg.json  windows_toolchain.cmake
docs/: RandomXMiner.md  RandomXMiner.txt  overview.md  setup.md
shaders/: fragment_shader.frag  vertex_shader.vert
src/: RandomXMinerTest.cpp  main.cpp
src/mining/: AdaptiveECCSolver.cpp  AdaptiveECCSolver.h  Block.h  RandomXMiner.cpp  RandomXMiner.h  mining.cpp  mining.h
src/utils/: file_utils.cpp  file_utils.h  miner_utils.cpp  miner_utils.h
src/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  vulkan_renderer.cpp  vulkan_renderer.h
